syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "e2ee_address.proto";
import "e2ee_account.proto";
import "e2ee_pre_key_bundle.proto";

enum e2ee_commands {
    register_user = 0;
    register_user_response = 4097;
    delete_user = 2;
    delete_user_response = 4099;
    get_pre_key_bundle = 4;
    get_pre_key_bundle_response = 4101;
    publish_spk = 6;
    publish_spk_response = 4103;
    supply_opks = 8;
    supply_opks_response = 4105;
    create_group = 10;
    create_group_response = 4107;
    get_group = 12;
    get_group_response = 4109;
    add_group_members = 14;
    add_group_members_response = 4111;
    remove_group_members = 16;
    remove_group_members_response = 4113;
    e2ee_msg = 18;
    e2ee_msg_response = 4115;
    e2ee_group_msg = 20;
    e2ee_group_msg_response = 4117;
}

message register_user_request_payload {
    bytes user_name = 1;
    bytes identity_key_public = 2;
    signed_pre_key_public signed_pre_key_public = 3;
    repeated one_time_pre_key_public one_time_pre_keys = 4;
}

message register_user_response_payload {
    uint32 code = 1;
    string msg = 2;
    e2ee_address address = 3;
}

message delete_user_request_payload {
    e2ee_address address = 1;
}

message delete_user_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message get_pre_key_bundle_request_payload {
    e2ee_address peer_address = 1;
}

message get_pre_key_bundle_response_payload {
    uint32 code = 1;
    string msg = 2;
    bytes user_name = 3;
    pre_key_bundle pre_key_bundle = 4;
}

message publish_spk_request_payload {
    e2ee_address user_address = 1;
    signed_pre_key_public signed_pre_key_public = 2;
}

message publish_spk_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message supply_opks_request_payload {
    uint32 opks_num = 1;
    e2ee_address user_address = 2;
}

message supply_opks_response_payload {
    uint32 code = 1;
    string msg = 2;
    e2ee_address user_address = 3;
    repeated one_time_pre_key_public one_time_pre_key_public = 4;
}

message create_group_request_payload {
    e2ee_address sender_address = 1;
    repeated e2ee_address member_addresses = 2;
    bytes group_name = 3;
    e2ee_address group_address = 4;
}

message create_group_response_payload {
    uint32 code = 1;
    string msg = 2;
    e2ee_address group_address = 3;
}

message get_group_request_payload {
    e2ee_address group_address = 1;
}

message get_group_response_payload {
    uint32 code = 1;
    string msg = 2;
    bytes group_name = 3;
    repeated e2ee_address member_addresses = 4;
}

message add_group_members_request_payload {
    e2ee_address sender_address = 1;
    e2ee_address group_address = 2;
    repeated e2ee_address member_addresses = 3;
}

message add_group_members_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message remove_group_members_request_payload {
    e2ee_address sender_address = 1;
    e2ee_address group_address = 2;
    repeated e2ee_address member_addresses = 3;
}

message remove_group_members_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message e2ee_msg_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message e2ee_group_msg_response_payload {
    uint32 code = 1;
    string msg = 2;
}

message e2ee_protocol_msg {
    uint32 id = 1;
    e2ee_commands cmd = 2;
    bytes payload = 3;
}
